Cambio Collertors por tolist  java 8 -> java 17